# ObjectTracking

./: CMakeLists.txt  README.md  tz.txt
apps/: readme.txt
apps/grabWindowName/: CMakeLists.txt  grabWindowName.cpp  readme.txt
include/: DisplayCapture.hpp  ImageGrab.hpp  ObjectTracking.hpp  TrackerMOSSEmod.hpp  TrackerMyImpl.hpp  cammera.hpp  tracker.hpp
include/tracker/: Consensus.hpp  Matcher.hpp  Tracker.hpp  TrackerCMT.hpp  TrackerMOSSEmod.hpp  common.hpp
include/tracker/fastcluster/: fastcluster.h
src/: DisplayCapture.cpp  ImageGrab.cpp  ObjectTracking.cpp  TrackerMOSSEmod.cpp  TrackerMyImpl.cpp  cammera.cpp  main.cpp
src/tracker/: Consensus.cpp  Matcher.cpp  Tracker.cpp  TrackerCMT.cpp  TrackerMOSSEmod.cpp  common.cpp
src/tracker/fastcluster/: fastcluster.cpp
